# kvint_test

./: README.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/src/: app_init.py  broker_init.py  choices.py  config.py  database_init.py  entrypoint.sh  entrypoint_workers.sh  main.py  result_backend.py  tasks.py
backend/src/api/: __init__.py  endpoints.py  requests.py  responses.py
backend/src/broker_utils/: __init__.py  events.py  middlewares.py
backend/src/db/: __init__.py  aggregations.py  clients.py  collections.py  models.py
backend/src/tasks/: __init__.py  calls.py
backend/src/tests/: conftest.py  test_api.py  test_tasks.py
script-client/: pyproject.toml  script.py
