[tool.poetry]
name = "kvint-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kvint_test"}]

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.1"
fastapi = "^0.104.1"
taskiq = "^0.10.2"
pydantic = "^2.4.2"
taskiq-aio-pika = "^0.4.0"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.3"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
